[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/DeveloperGUI.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PopupMenu.gd" type="Script" id=2]

[node name="Control" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1424.0
margin_bottom = -736.0
script = ExtResource( 1 )

[node name="Options" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
hide_on_checkable_item_selection = false
hide_on_state_item_selection = true
script = ExtResource( 2 )

[node name="AddItems" type="PopupMenu" parent="Options"]
margin_right = 20.0
margin_bottom = 20.0
hide_on_state_item_selection = true

[node name="ActiveItems" type="PopupMenu" parent="Options/AddItems"]
margin_right = 20.0
margin_bottom = 20.0
hide_on_state_item_selection = true

[node name="Items" type="PopupMenu" parent="Options/AddItems"]
margin_right = 20.0
margin_bottom = 20.0
hide_on_state_item_selection = true

[node name="Guns" type="PopupMenu" parent="Options/AddItems"]
margin_right = 20.0
margin_bottom = 20.0
hide_on_state_item_selection = true

[connection signal="button_up" from="." to="." method="_on_Control_button_up"]
[connection signal="index_pressed" from="Options" to="." method="_on_Options_index_pressed"]
[connection signal="index_pressed" from="Options/AddItems/ActiveItems" to="." method="_on_ActiveItems_index_pressed"]
[connection signal="index_pressed" from="Options/AddItems/Items" to="." method="_on_Items_index_pressed"]
[connection signal="index_pressed" from="Options/AddItems/Guns" to="." method="_on_Guns_index_pressed"]
